# ngsigw-results

./: .gitignore  CITATION.cff  MANIFEST.in  README.rst  example.ipynb  pyproject.toml
.github/workflows/: ci.yml
ngsigw_results/: __init__.py
ngsigw_results/data/: ngsigw-results.h5
test/: test_ngsigw.py
